# reachy_mini_app

./: .gitignore  PROJECT.md  README.md  behaviors.py  chat.py  check_audio.py  cps_manager.py  dashboard_state.py  history.html  index.html  launcher.py  main.py  memory_manager.py  pyproject.toml  reachy_chat.py  requirements.txt  test_devices.py  test_mic.py  test_sim.py  test_tts.py  test_whisper.py  vad.py
cps/: clarify.md  develop.md  ideate.md  implement.md
