[project]
name = "reachy-mini-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "edge-tts>=7.2.7",
    "faster-whisper>=1.2.1",
    "ollama>=0.6.1",
    "reachy-mini[mujoco]>=1.5.0",
    "setuptools>=82.0.0",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "webrtcvad-wheels>=2.0.14",
]
