[project]
name = "reachy-mini-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.86.0",
    "asyncio>=4.0.0",
    "edge-tts>=7.2.7",
    "faster-whisper>=1.2.1",
    "flask>=3.1.3",
    "ollama>=0.6.1",
    "pyaudio>=0.2.14",
    "pygame>=2.6.1",
    "python-dotenv>=1.2.2",
    "reachy-mini[mujoco]==1.5.0",
    "setuptools>=82.0.0",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
]
